--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,7 +14,7 @@ on:
   pull_request:
     branches: [ "main" ]
   schedule:
-    - cron: "0 13 * * *"  # Run every day at 6 PM UTC
+    - cron: "0 13 * * *"  # Run every day at 6 PM IST
 
 jobs:
   build:
